Bug 184360 - wrong title when creating new entry
Summary: wrong title when creating new entry
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-15 00:23 UTC by Mikolaj Machowski
Modified: 2009-02-17 20:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikolaj Machowski 2009-02-15 00:23:15 UTC
Version:            (using Devel)
Compiler:          gcc4.3.2 
OS:                Linux
Installed from:    Compiled sources

4.2svn, qt-copy 4.4.3

When creating new entry in journal automatic title is created with date of first ever entry in journal (9 Feb 2009). Time is correct (hour and date of entry creation).

I understand it should be current date as title.
Comment 1 Mikolaj Machowski 2009-02-15 00:47:22 UTC
Not only date in title is wrong but also in date picker is wrong too.
Comment 2 Allen Winter 2009-02-15 02:14:59 UTC
Mikolaj,

Please provide specific steps how to reproduce this.
So far am I unable to reproduce what you describe.
Comment 3 Sergio Martins 2009-02-15 04:11:28 UTC
If I understand this correctly, he's saying, when "New Journal" is pressed, the default title is February 9th, and not February 15th (today).

Well, February 9th is the first day in the selection (the selection in the mini-calendar at your left), that's why it's chosen, it's not because it's the date of the first journal ever.

Maybe this bug should be a wish.
Comment 4 Mikolaj Machowski 2009-02-15 12:55:28 UTC
After Sergio note I understand logic - but don't like it.

In KOrganizer I use week view, when switching to Journal view it stays - whole week is selected. And at the moment 9 Feb is first day of current week. So it is put in date selector as first day of selection.

Why I don't like it? Journal entry is (IMO) what I am doing here and now. By default it should be current day and date as specified by system clock. Journal for me isn't some support of scheduler when you can do notes for future dates but recording of current activity. It is especially in contrast with time: date is properly inserted. If 9 Feb is inserted as date why not eg. 0:00 as time? Equally fictional.

Also there is problem with default title. It is inserted as "Journal for 09-02-09". But when I switch date for today it stays in such form which is bad. BTW with current displaying of journal entry you have much redundancy:
-------------------------
Journal for 09-02-09
2009-02-09 17:13

[entry]
-------------------------
or in case described above:
-------------------------
Journal for 09-02-09
2009-02-14 17:13

[entry]
-------------------------
With possible multiple entries per day it looks even more crowded. My wishes/suggestions for handling of date/layout:

- put current date/time as default - most people[*] use journal for recording of here and now, not as support for scheduler
- don't use default title, leave this space blank

[*] I admit, I don't know how people use *KDE-PIM* journal but I mean this in general context of journal, coming from - you know - those small paper notebook ;) I suspect that because journal is technically tied with other parts of KOrganizer that conceptually it became very integral part of it, while in fact there are some differences.

Although I think current behavior is so counter intuitive it should qualify as bug, change qualification to 'wish' if you consider it appropriate.
Comment 5 Sergio Martins 2009-02-16 19:06:28 UTC
SVN commit 927054 by smartins:

When creating a journal, use today as the default date (unless the user explicitly selected a day
in agenda/month/date navigator).

CCBUG: 184360


 M  +9 -4      calendarview.cpp  
 M  +6 -1      calendarview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=927054
Comment 6 Allen Winter 2009-02-17 01:13:40 UTC
SVN commit 927191 by winterz:

Don't provide a default Journal title (summary) for bug 184360.
Also validate an empty Journal title.

While I was at it I went a little nuts and fixed a bunch of little
nits with the Journals.. like making templates work, and other things
that make the code more consistent with the Event and To-do editors.

DO-NOT-BACKPORT:
BUG: 184360


 M  +2 -7      calendarview.cpp  
 M  +22 -13    koeditorgeneraljournal.cpp  
 M  +4 -5      koeditorgeneraljournal.h  
 M  +54 -24    kojournaleditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=927191
Comment 7 Mikolaj Machowski 2009-02-17 20:32:34 UTC
Thanks!