Don't provide a default Journal title (summary) for bug 184360. Also validate an empty Journal title.

While I was at it I went a little nuts and fixed a bunch of little
nits with the Journals.. like making templates work, and other things
that make the code more consistent with the Event and To-do editors.

DO-NOT-BACKPORT:
BUG: 184360

svn path=/trunk/KDE/kdepim/; revision=927191